# sec-edgar-mcp

./: .env.example  .gitignore  README.md  fix_repo.py  fix_repo.sh  pyproject.toml  requirements.txt  test_run.py
src/sec_edgar_mcp/: __init__.py  edgar_client.py  server.py
src/sec_edgar_mcp/tools/: __init__.py  compare_filings.py  get_filing.py  get_financials.py  search_company.py
src/tools/: get_financials.py
tests/: conftest.py  test_run.py  test_tools.py
