[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-edgar-mcp"
version = "0.1.0"
description = "MCP server for querying live SEC EDGAR financial data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "sec", "edgar", "finance", "llm", "claude"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sec-edgar-mcp = "sec_edgar_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_edgar_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
